@@ -6,17 +6,21 @@ plugins {
 description = 'vscode-gradle :: gradle-server'
 
 java {
-  sourceCompatibility = JavaVersion.VERSION_1_8
-  targetCompatibility = JavaVersion.VERSION_1_8
+  sourceCompatibility = JavaVersion.VERSION_17
+  targetCompatibility = JavaVersion.VERSION_17
 }
 
 dependencies {
   implementation project(":gradle-plugin-api")
-  implementation "org.gradle:gradle-tooling-api:${toolingAPIVersion}"
+  implementation files('build/libs/server.jar')
+  implementation fileTree(dir: 'build/libs/runtime', include: ['*.jar'], exclude: ['gradle-tooling-api-*.jar',
+  'slf4j-api-*.jar'])
+  implementation("org.gradle:gradle-tooling-api:${toolingAPIVersion}")
   implementation 'javax.annotation:javax.annotation-api:1.3.2'
   implementation "io.grpc:grpc-protobuf:${grpcVersion}"
   implementation "io.grpc:grpc-stub:${grpcVersion}"
   implementation 'io.github.g00fy2:versioncompare:1.4.1'
+  implementation files('build/libs/ls-fat-jar.jar')
   runtimeOnly "io.grpc:grpc-netty:${grpcVersion}"
   runtimeOnly 'org.slf4j:slf4j-simple:2.0.0-alpha6'
   testImplementation "io.grpc:grpc-testing:${grpcVersion}"
@@ -107,7 +111,6 @@ spotless {
 task serverStartScripts(type: CreateStartScripts) {
   dependsOn jar
   dependsOn 'copyRuntimeLibs'
-  dependsOn(':gradle-language-server:copyJar')
   outputDir = file(libsDir)
   mainClass = 'com.github.badsyntax.gradle.GradleServer'
   applicationName = project.name
@@ -122,8 +125,13 @@ task serverStartScripts(type: CreateStartScripts) {
 }
 
 task copyRuntimeLibs(type: Copy) {
-  into "../extension/lib"
   from configurations.runtimeClasspath
+  into libsDir
+  duplicatesStrategy = 'exclude'
+  mustRunAfter ':gradle-language-server:customFatJar'
+  doFirst {
+    delete libsDir
+  }
 }
 
 project.tasks.named("processResources") {
@@ -131,5 +139,14 @@ project.tasks.named("processResources") {
   duplicatesStrategy = 'include'
 }
 
-compileJava.dependsOn 'generateProto', 'spotlessCheck'
+test {
+    jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED',
+    '--add-opens=java.base/java.util=ALL-UNNAMED',
+    '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
+    '--add-opens=java.base/java.nio.file=ALL-UNNAMED',
+    '--add-opens=java.base/java.io=ALL-UNNAMED',
+    '--add-opens=java.base/sun.nio.fs=ALL-UNNAMED'
+}
+
+compileJava.dependsOn 'generateProto', 'spotlessCheck', ':gradle-language-server:customFatJar'
 assemble.dependsOn serverStartScripts
